@@ -2497,7 +2497,6 @@ const wchar_t* BobbyRText[] =
 	L"Inventario:",			// The number of items still in the store's inventory
 	L"Num. ordine:",		// The number of items on order
 	L"Danneggiato",			// If the item is damaged
-	L"Peso:",			// the Weight of the item
 	L"Totale:",			// The total cost of all items on order
 	L"* funzionale al %",		// if the item is damaged, displays the percent function of the item
 
